--- a/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,14 @@
     <script src="~/AdminLTE/bower_components/fastclick/lib/fastclick.js"></script>
     <!-- AdminLTE App -->
     <script src="~/AdminLTE/dist/js/adminlte.min.js"></script>
+    <!--DATATABLES-->
+    <script src="~/AdminLTE/bower_components/datatables.net/js/jquery.dataTables.js"></script>
+    <script src="~/AdminLTE/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
+
+    <script src="~/AdminLTE/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
+    <script src="~/AdminLTE/bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>    
+    <link href="~/AdminLTE/bower_components/datatables.net-bs/css/dataTables.bootstrap.css" rel="stylesheet" />
+    <link href="~/AdminLTE/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet" />
     <!-- AdminLTE for demo purposes -->
     <script src="~/AdminLTE/dist/js/demo.js"></script>
     <!-- Bootstrap DatePicker -->
