--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Dashboard/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Dashboard/Index.cshtml
@@ -5,7 +5,8 @@
     {
         Response.Redirect("~/Account/Login");
     }
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
@@ -16,30 +17,44 @@
     @Html.HiddenFor(q => q.fecha_ini, new { @id = "fecha_ini" })
     @Html.HiddenFor(q => q.fecha_fin, new { @id = "fecha_fin" })
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6">
-                <div class="box box-default">
-                    <canvas class="canvas" id="UltimasVentasAnio"></canvas>
-                </div>                        
-            </div>
-            <div class="col-md-6">
-                <div class="box box-default">
-                    <canvas class="canvas" id="UltimasVentasMeses"></canvas>
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">Ventas</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                        <i class="fa fa-times"></i>
+                    </button>
                 </div>
             </div>
+            <div class="box-body">
+                <div class="col-md-6">
+                    <canvas class="canvas" id="UltimasVentasAnio"></canvas>
+                </div>
+                <div class="col-md-6">
+                    <canvas class="canvas" id="UltimasVentasMeses"></canvas>
+                </div>                    
+            </div>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-8">
-                <div class="box box-default">
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">Clientes</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                        <i class="fa fa-times"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="box-body">
+                <div class="col-md-8">
                     <canvas class="canvas" id="VentasClientes"></canvas>
-                </div> 
-            </div>            
-            <div class="col-md-4">
-                <div class="box box-default">
+                </div>
+                <div class="col-md-4">
                     <table id="Table_VentasClientes" class="table table-responsive dataTable dataTables_paginate">
                         <thead>
                             <tr role="row">
@@ -53,17 +68,23 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-8">
-                <div class="box box-default">
-                    <canvas class="canvas" id="VentasProductos"></canvas>
-                </div> 
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">Productos</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                        <i class="fa fa-times"></i>
+                    </button>
+                </div>
             </div>
-            <div class="col-md-4">
-                <div class="box box-default">
+            <div class="box-body">
+                <div class="col-md-8">
+                    <canvas class="canvas" id="VentasProductos"></canvas>
+                </div>
+                <div class="col-md-4">
                     <table id="Table_VentasProductos" class="table table-responsive dataTable dataTables_paginate">
                         <thead>
                             <tr role="row">
@@ -75,11 +96,27 @@
                         </thead>
                         <tbody id="Detalle_VentasProductos"></tbody>
                     </table>
-                </div> 
+                </div>
             </div>
         </div>
-    </div>
-
+    @*<div class="col-md-6">
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">Dashboard</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                        <i class="fa fa-times"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="box-body">
+                
+            </div>
+        </div>
+    </div>*@
 }
 <script type="text/javascript">
     $(function () {
@@ -340,13 +377,13 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                var detalle="";
+                var detalle = "";
                 $.each(data, function (index, value) {
                     detalle += "<tr>" +
-                                "<td>"+value.Anio+"</td>"+
-                                "<td>"+value.Mes+"</td>"+
+                                "<td>" + value.Anio + "</td>" +
+                                "<td>" + value.Mes + "</td>" +
                                 "<td>" + value.Total_String + "</td>" +
-                               "</tr>";
+                                "</tr>";
                 })
                 $("#Table_VentasClientes tbody").append(detalle)
 
@@ -454,7 +491,7 @@
                                 "<td>" + value.Mes + "</td>" +
                                 "<td>" + value.Precio_String + "</td>" +
                                 "<td>" + value.Total_String + "</td>" +
-                               "</tr>";
+                                "</tr>";
                 })
                 $("#Table_VentasProductos tbody").append(detalle)
 
