--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/HorasExtras/_GridViewPartial_aprobacion_horas_extras_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/HorasExtras/_GridViewPartial_aprobacion_horas_extras_det.cshtml
@@ -1,3 +1,13 @@
+
+
+
+
+
+
+
+
+
+
 @using System.Web.UI.WebControls;
 @model Core.Erp.Info.RRHH.ro_nomina_x_horas_extras_Info
 @{
@@ -9,21 +19,29 @@
 
         settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
-        settings.SettingsEditing.Mode = GridViewEditingMode.PopupEditForm;
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "HorasExtras", Action = "EditingUpdate_apro", Area = "RRHH" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "HorasExtras", Action = "EditingDelete_apro", Area = "RRHH" };
 
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowEditButton = true;
+        settings.CommandColumn.ShowDeleteButton = true;
 
-        settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsBehavior.EnableCustomizationWindow = true;
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
 
+
         settings.Settings.ShowFilterRow = true;
         settings.Settings.ShowHeaderFilterButton = true;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
-        //Configuracion responsive
-        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
+//Configuración para que la grilla no muestre texto completo
+settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+
+//Configuracion responsive
+settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
@@ -31,71 +49,114 @@
 
 
 
-        settings.Columns.Add("IdCalendario").Visible = false;
-        settings.Columns.Add("IdEmpleado", "ID emp.").Width = Unit.Percentage(5);
-        settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(5);
-        settings.Columns.Add("pe_nombreCompleto", "Empleado").Width = Unit.Percentage(50);
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdEmpleado";
+            column.Caption = "ID";
+            column.Width = Unit.Percentage(5);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pe_cedulaRuc";
+            column.Caption = "Cédula";
+            column.Width = Unit.Percentage(8);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pe_nombreCompleto";
+            column.Caption = "Empleado";
+            column.Width = Unit.Percentage(20);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "FechaRegistro";
             column.Caption = "Fecha";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
             {
                 column.PropertiesEdit.DisplayFormatString = "d";
                 sp.Width = Unit.Percentage(100);
             });
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
-        settings.Columns.Add("time_entrada1", "Ingreso").Width = Unit.Percentage(5);
-        settings.Columns.Add("time_salida1", "Salida").Width = Unit.Percentage(5);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "time_entrada1";
+            column.Caption = "Ingreso";
+            column.Width = Unit.Percentage(8);
+
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "time_salida1";
+            column.Caption = "Salida";
+            column.Width = Unit.Percentage(8);
+
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "hora_trabajada";
             column.Caption = "H. trabajadas";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "n2";
             column.EditorProperties().TextBox(sp =>
             {
                 column.PropertiesEdit.DisplayFormatString = "n2";
                 sp.Width = Unit.Percentage(100);
             });
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "hora_extra25";
             column.Caption = "HE 25";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "n2";
             column.EditorProperties().TextBox(sp =>
             {
                 column.PropertiesEdit.DisplayFormatString = "n2";
                 sp.Width = Unit.Percentage(100);
             });
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "hora_extra50";
             column.Caption = "HE 50";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "n2";
             column.EditorProperties().TextBox(sp =>
             {
                 column.PropertiesEdit.DisplayFormatString = "n2";
                 sp.Width = Unit.Percentage(100);
             });
+            column.EditFormSettings.Visible = DefaultBoolean.True;
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "hora_extra100";
             column.Caption = "HE 100";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "n2";
             column.EditorProperties().TextBox(sp =>
             {
                 column.PropertiesEdit.DisplayFormatString = "n2";
                 sp.Width = Unit.Percentage(100);
             });
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+
         });
 
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "hora_extra25");
