--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/HorasExtras/_GridViewPartial_horas_extras_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/HorasExtras/_GridViewPartial_horas_extras_det.cshtml
@@ -10,14 +10,14 @@
         settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "HorasExtras", Action = "EditingUpdate", Area = "RRHH" };
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "HorasExtras", Action = "EditingAddNew", Area = "RRHH" };
+        //settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "HorasExtras", Action = "EditingUpdate", Area = "RRHH" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "HorasExtras", Action = "EditingDelete", Area = "RRHH" };
 
         settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowEditButton = true;
+        settings.CommandColumn.ShowEditButton = false;
         settings.CommandColumn.ShowDeleteButton = true;
-
-
+        settings.CommandColumn.ShowNewButtonInHeader = true;
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
@@ -38,60 +38,86 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
 
+        //settings.Columns.Add(column =>
+        //{
+        //    column.FieldName = "IdEmpleado";
+        //    column.Caption = "ID";
+        //    column.Width = Unit.Percentage(5);
+        //    column.EditFormSettings.Visible = DefaultBoolean.False;
 
+        //});
+        //settings.Columns.Add(column =>
+        //{
+        //    column.FieldName = "pe_cedulaRuc";
+        //    column.Caption = "Cédula";
+        //    column.Width = Unit.Percentage(8);
+        //    column.EditFormSettings.Visible = DefaultBoolean.False;
 
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "IdEmpleado";
-            column.Caption = "ID";
-            column.Width = Unit.Percentage(5);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+        //});
+        //settings.Columns.Add(column =>
+        //{
+        //    column.FieldName = "pe_nombreCompleto";
+        //    column.Caption = "Empleado";
+        //    column.Width = Unit.Percentage(20);
+        //    column.EditFormSettings.Visible = DefaultBoolean.False;
 
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pe_cedulaRuc";
-            column.Caption = "Cédula";
-            column.Width = Unit.Percentage(8);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-
-        });
+        //});
         settings.Columns.Add(column =>
         {
             column.FieldName = "pe_nombreCompleto";
             column.Caption = "Empleado";
-            column.Width = Unit.Percentage(20);
+            column.Width = Unit.Percentage(30);
+            column.Visible = true;
             column.EditFormSettings.Visible = DefaultBoolean.False;
-
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdEmpleado";
+            column.Caption = "Empleado";
+            column.Width = Unit.Percentage(30);
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
+            {
+                Html.RenderPartial("_CmbEmpleado_HorasExtras", DataBinder.Eval(c.DataItem, "IdEmpleado"));
+            });
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "FechaRegistro";
             column.Caption = "Fecha";
-            column.Width = Unit.Percentage(8);
+            column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
             {
                 column.PropertiesEdit.DisplayFormatString = "d";
                 sp.Width = Unit.Percentage(100);
             });
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "time_entrada1";
+            column.FieldName = "time_entrada1_date";
             column.Caption = "Ingreso";
             column.Width = Unit.Percentage(8);
-            
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.EditorProperties().TimeEdit(sp =>
+            {
+                column.PropertiesEdit.DisplayFormatString = "{0:t}";
+                sp.Width = Unit.Percentage(100);
+            });
+            column.EditFormSettings.Visible = DefaultBoolean.True;
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "time_salida1";
+            column.FieldName = "time_salida1_date";
             column.Caption = "Salida";
             column.Width = Unit.Percentage(8);
-
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.EditorProperties().TimeEdit(sp =>
+            {
+                column.PropertiesEdit.DisplayFormatString = "{0:t}";
+                sp.Width = Unit.Percentage(100);
+            });
+            column.EditFormSettings.Visible = DefaultBoolean.True;
         });
         settings.Columns.Add(column =>
         {
@@ -118,7 +144,7 @@
                 column.PropertiesEdit.DisplayFormatString = "n2";
                 sp.Width = Unit.Percentage(100);
             });
-            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
 
         });
         settings.Columns.Add(column =>
@@ -132,7 +158,7 @@
                 column.PropertiesEdit.DisplayFormatString = "n2";
                 sp.Width = Unit.Percentage(100);
             });
-            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
@@ -145,7 +171,7 @@
                 column.PropertiesEdit.DisplayFormatString = "n2";
                 sp.Width = Unit.Percentage(100);
             });
-            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
 
         });
 
